test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/plx1_address_of_sizeof.plx
pub fn main(none) i32 {
    x: i32 = 1
    y: i32 = @sizeof(x)
    return 0
}
